# zkpool

./: .env  .gitignore  Cargo.toml  Readme.md  db.sql  main.aleo  program.json
device/: Cargo.toml
device/src/: device.rs  main.rs  prover.rs
pool/: Cargo.toml
pool/src/: main.rs  node.rs  pool.rs  rpc.rs  shares.rs
