[package]
name = "aleodevice"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
rand = "0.8"
serde = "1"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = "1.0.87"

[dependencies.jsonrpsee]
git = "https://github.com/paritytech/jsonrpsee"
rev = "e649f38"
features = ["full"]

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/new-posw-prover"
features = [
    "cuda",
    "algorithms",
    "curves",
    "fields",
    "r1cs",
    "utilities",
    "parallel",
]

[target.'cfg(any(unix, target_os = "redox"))'.dependencies]
libc = "^0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["sysinfoapi"] }