[package]
name = "aleopool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
futures-util = "0.3.25"
rand = "0.8"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = "1.0.139"
serde_json = "1"
parking_lot = {version = "0.12.1",features = ["serde"]}
dotenv = "0.15"
deadpool-postgres = { version = "0.10.2"}
tokio-postgres = { version = "0.7.6" }
once_cell = "1.0"

[dependencies.jsonrpsee]
git = "https://github.com/paritytech/jsonrpsee"
rev = "e649f38"
features = ["full"]

[dependencies.snarkvm]
#path = "../snarkVM"
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "4045a57"
features = ["circuit", "parallel"]
